# KeyboardSynthesizer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  scale_map.json
include/: audio_player.hpp  audio_settings.hpp  base_loop.hpp  config_manager.hpp  configure_loop.hpp  input_handler.hpp  json_manager.hpp  main_loop.hpp  musical_scale_map.hpp  oscillator.hpp  pa_data.hpp  play_loop.hpp  preset_manager.hpp  scale_manager.hpp  synth_engine.hpp  synth_state.hpp  synthesizer.hpp  wave_types.hpp
resources/etc/: keys_span.json  preset.json
resources/test/: test_data.json
src/: audio_player.cpp  base_loop.cpp  config_manager.cpp  configure_loop.cpp  input_handler.cpp  main_loop.cpp  musical_scale_map.cpp  oscillator.cpp  play_loop.cpp  preset_manager.cpp  scale_manager.cpp  synthesizer.cpp
test/: CMakeLists.txt  config_manager_test.cpp  json_manager_test.cpp
